--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,6 @@ services:
       dockerfile: frontend.Dockerfile
     ports:
       - "8000:80"
-    networks:
-      - test-net
     depends_on:
       - backend
 
@@ -17,7 +15,7 @@ services:
     ports:
       - "8080:80" 
     networks:
-      - test-net
+      - examenInternal
     depends_on:
       - mysql
 
@@ -31,10 +29,10 @@ services:
     volumes:
       - databaseVolume:/var/lib/mysql
     networks:
-      - test-net
+      - examenInternal
 
 networks:
-  test-net:
+  examenInternal:
 
 volumes:
   databaseVolume:
